recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:2: error: '(' expected but identifier found.
  for i<-1 to 4:
      ^